# OnlineCinemaAPI

./: .env.sample  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  ruff.yml
commands/: run_migration.sh
src/: alembic.ini  load_fixture.py  main.py
src/celery_tasks/: tasks.py
src/config/: __init__.py  celery_config.py  dependencies.py  rate_limiter.py  settings.py
src/database/: __init__.py  fixtures.py  session_postgresql.py  session_sqlite.py
src/database/migrations/: env.py
src/database/migrations/versions/: 0568b5c1aec4_initial_migration.py  0c8568734095_initial_migration.py  1851840b3df9_add_cart_models_and_cart_item.py  1fe402e55d5c_.py  2347d2d40540_add_movie_extra_options.py  60865ab727e5_initial_migration.py  63ddae44b8db_initial_migration.py  7e148921e5a1_create_user_and_token_models.py  a29e42078b91_initial_migration.py  a85e04de010e_initial_migration.py  b60d44aed06f_initial_migration.py  bd894d703d8f_add_rating_to_movies.py  c1c7bb8294f2_create_order_and_order_item_models.py  df00684ad5dd_add_payments_and_payment_items_tables.py
src/database/models/: __init__.py  accounts.py  cart.py  films_features.py  movies.py  orders.py  payments.py
src/exceptions/: __init__.py
src/mail_service/: mail_service.py
src/mail_service/templates/: activation_complete_email.html  activation_email.html  movie_already_in_orders.html  movie_unavailable_email.html  password_reset_complete_email.html  password_reset_request_email.html
src/routes/: __init__.py  accounts.py  carts.py  movies.py  orders.py  payments.py  profiles.py
src/schemas/: accounts.py  carts.py  movies.py  orders.py  payments.py  profiles.py
src/security/: http.py  passwords.py  token_generator.py  token_manager.py
src/services/: __init__.py  email_notifications.py  user_dependency.py  user_profile.py  user_service.py
src/storages/: s3.py
src/tests/: conftest.py  test_accounts.py
src/validation/: __init__.py  profile.py
